Fix JEI issues with Thermionic Fabricator, Carpenter, and Worktable